# slim-theta

./: .gitignore  CMakeLists.txt  FindBoost.cmake  FindROOT.cmake  FindSqlite.cmake  README.md
libconfig/: CMakeLists.txt
libconfig/.svn/: all-wcprops  entries
plugins/: CMakeLists.txt  core.cpp  core.hpp  cubiclinear_histomorph.cpp  cubiclinear_histomorph.hpp  histogram_add.cpp  histogram_add.hpp  minimizer_chain.cpp  mle.cpp  mle.hpp  newton-utils.cpp  newton.cpp
plugins/.svn/: all-wcprops  entries
python/: CMakeLists.txt  ModelClasses.py  generateFitModel.py
root/: CMakeLists.txt  root_histogram.cpp  root_histogram.hpp  root_minuit.cpp  root_projector.cpp  root_projector.hpp
src/: CMakeLists.txt  log2_dot.cpp  redirect_stdio.cpp
src/.svn/: all-wcprops  entries
